--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
 <body>
   <header>
     <div class="logo">
-      <h1>
-        <!-- <a href="#" class="to_top">雑貨屋 ieya</a> -->
-        <a href="file:///Users/yasuyuki/Desktop/ieya/index.html">雑貨屋 ieya</a>
-        <!-- <img src="./img/ieya.gif" alt="雑貨屋 ieyaのロゴ画像"> -->
-        <!-- 雑貨屋 ieya -->
-      </h1>
+      <h1>雑貨屋 ieya</h1>
     </div>
 
     <div class="pc-menu">
@@ -30,6 +25,7 @@
           <li><a href="#onlineshop_top">Online Shop</a></li>
           <li><a href="#access_top">Access</a></li>
           <li><a href="#contact_top">Contact</a></li>
+          <li><a href="http://howlinwolf0716.blog69.fc2.com/" target="_blank">Blog</a></li>
           <li><a href="https://store.line.me/stickershop/product/1147053/ja" target="_blank">LINEスタンプ</a></li>
         </ul>
       </nav>
@@ -44,13 +40,13 @@
   <div id="target"></div>
   
   <div class="overlay">
-    <!-- <span class="material-icons" id="close">close</span> -->
     <nav>
       <ul>
         <li><a href="#aboutus_top" class="overlayA">About Us</a></li>
         <li><a href="#onlineshop_top" class="overlayA">Online Shop</a></li>
         <li><a href="#access_top" class="overlayA">Access</a></li>
         <li><a href="#contact_top" class="overlayA">Contact</a></li>
+        <li><a href="http://howlinwolf0716.blog69.fc2.com/" target="_blank" class="overlayA">Blog</a></li>
         <li><a href="https://store.line.me/stickershop/product/1147053/ja" target="_blank" class="overlayA">LINEスタンプ</a></li>
       </ul>
     </nav>
@@ -68,7 +64,7 @@
         <p>
           おうち時間を楽しくをテーマに日用品雑貨や洋服、植物など自分達夫婦の好きな物が色々置いてあります。古物品の販売、買い取りなども少ししてます。ご相談下さい。他にも内装工事や簡単なテーブル、棚、椅子、オリジナルグッズの製作（バッグ、カレンダー、名刺、チラシ、布小物など）も出来ます。
         </p>
-        <p>現在店舗はお休みしていますが、ご連絡頂ければお店を開けますので、ご来店の際はよろしくお願いします。</p>
+        <p>現在店舗はお休みしています。ご連絡頂ければお店を開けますので、ご来店の際はよろしくお願いします。</p>
         <div class="animate slide-from-left">
           <img src="./img/interior1.jpeg" alt="店の内観1">
         </div>
@@ -104,31 +100,27 @@
       <div id="access_top" class="desc_top"></div>
       <div id="access">
         <h2>Access</h2>
-        <!-- <div class="access-info"> -->
         <div class="desc">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3210.2422374567673!2d139.04705261516025!3d36.42752488002697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601ef4b0d140a15f%3A0x46c58d3e990e0eb!2z44CSMzcxLTAwNDQg576k6aas55yM5YmN5qmL5biC6I2S54mn55S677yU5LiB55uu77yR77yQ4oiS77yR77yX!5e0!3m2!1sja!2sjp!4v1642238959746!5m2!1sja!2sjp" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" class="map_large"></iframe>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3210.2422324958916!2d139.049241!3d36.427525!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601ef4b0d140a15f%3A0x46c58d3e990e0eb!2z44CSMzcxLTAwNDQg576k6aas55yM5YmN5qmL5biC6I2S54mn55S677yU5LiB55uu77yR77yQ4oiS77yR77yX!5e0!3m2!1sja!2sjp!4v1643978300894!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="map_small"></iframe>
           <div class="access-info-data">
             <p>群馬県前橋市荒牧町4-10-17</p>
             <p>上毛大橋のある通りで隣がmashukashuさんでその隣がセルフィッシュさんです。お店の前が駐車場になります。</p>
+            <p>16時まで駐車可能なスペースもご用意しています。下の地図をご参照下さい。わかりずらい場合はお問い合わせ下さい。</p>
+            <img src="./img/osirase.jpeg" alt="お知らせ">
           </div>
         </div>
-        <!-- </div> -->
       </div>
       
       <div id="contact_top" class="desc_top"></div>
       <div id="contact">
         <h2>Contact</h2>
         <div class="desc">
-          <!-- <div class="contact-info-pic"> -->
             <img src="./img/dogs.jpeg" alt="犬のイラスト">
-            <!-- </div> -->
           <div class="contact-info-data">
-            <!-- <p><a href="tel:027-257-9498">027-257-9498</a></p> -->
             <div class="mail">
               <i class="bi bi-envelope"><a href="mailto:zakkaya@ieya.net">zakkaya@ieya.net</a></i>
             </div>
-            <!-- <p><a href="mailto:zakkaya@ieya.net">zakkaya@ieya.net</a></p> -->
             <p>携帯のメールだと送れない場合がありますので、なるべくPCからお願いします。</p>
           </div>
         </div>
@@ -140,7 +132,6 @@
     <div class="container">
       <div class="footer-info-ph"><img src="./img/exterior.jpeg" alt="店の外観"></div>
       <div class="footer-info-data">
-        <!-- <h2 class="footer-info-title"><img src="./img/ieya.gif" alt="雑貨屋 ieyaのロゴ画像"></h2> -->
         <h2 class="footer-info-title">雑貨屋 ieya</h2>
         <dl class="footer-info-list">
           <dt>【営業時間】</dt>
@@ -163,12 +154,8 @@
     </div>
   </footer>
 
-  <!-- <div id="pagetop">
-    <i class="bi bi-arrow-up-circle"></i>
-  </div> -->
   <a href="#" id="to_top">
     <i class="bi bi-arrow-up-circle"></i>
-    <!-- <i class="bi bi-arrow-up-square-fill"></i> -->
   </a>
 
   <script src="./js/main.js"></script>
